fixed things to try spacing for old emulator

--- a/web-messaging/css/style.css
+++ b/web-messaging/css/style.css
@@ -571,7 +571,8 @@ a {
     line-height: 28px;
     letter-spacing: 0.01em;
     font-family: Roboto;
-    color: #FFFFFF
+    color: #FFFFFF;
+    margin-bottom: 16px;
 }
 .form-box{
     display:inline-block !important;
